--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -17,7 +17,8 @@ body
 	border-radius 8px
 	padding 6px 16px
 	font 500 16px/19.2px Barlow
-	position: relative
+	color RGB($pdark_blue)
+	position relative
 	transition .35s ease
 	&:hover
 		border-color: RGB($plight_blue)
