--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -870,9 +870,26 @@ body
 				font 400 16px/19.2px Barlow
 			&>span
 				color RGB($pdark_gray)
+	&-white
+		&-items
+			+desktop()
+				w 1024px
+				flex-shrink 0
+				display flex
+				align-items flex-start
+				flex-wrap wrap
+				gap 16px
+				.white-block
+					margin 0
+	&-mobile
+		&-hidden
+			display none
+			+desktop()
+				display block
 .white
 	&-items
 		margin-top 50px
+		row-gap 70px
 		+desktop()
 			margin-top: 32px
 	&-block
@@ -887,6 +904,15 @@ body
 			margin-right: 16px
 			min-width 504px
 			max-width 504px
+		&:last-child
+			margin-bottom 0
+		&-inner
+			padding 24px
+		&.-upgrade
+			padding 0
+			&:hover
+				.white-upgrade
+					opacity: 1
 		.btn
 			w 100%
 			+desktop()
@@ -914,27 +940,29 @@ body
 				wh 16px
 				margin-right: 6px
 		&_title
-			display: flex
-			align-items: center
-			column-gap: 8px
-			font 500 32px/32px Barlow
+			display flex
+			align-items center
+			column-gap 8px
+			font 500 24px/32px Barlow
 			color RGB($pdark_blue)
 			order 2
-			margin-top: 8px
-			svg
-				wh 24px
+			margin-top 8px
 			+desktop()
 				order 0
-				margin-top: 0
+				margin-top 0
+			svg
+				wh 24px
 		&-list
-			margin-top: 16px
+			margin-top 16px
 			&-item
 				display: flex
-				padding: 16px 0
+				padding: 16px
 				border-radius 8px
 				transition .35s ease
 				&:hover:not(:last-child)
 					background-color RGBA($plight_blue,.08)
+				&:last-child
+					padding 16px 0 0
 				&.nopad
 					flex-wrap wrap
 					+desktop()
@@ -995,23 +1023,23 @@ body
 					font 500 16px/19.2px Barlow
 					color RGB($pdark_blue)
 					margin-bottom: 4px
-				&.-upgrade:hover
-					.white-upgrade
-						opacity: 1
 			&-item_image
-				flex 0 0 calc( 16px + 16px + 10px)
-				display: flex
+				flex-shrink 0
+				display flex
 				justify-content center
-				margin-right: 8px
+				margin-right 8px
 				+desktop()
-					margin-right: 0px
+					margin-right 0
 					flex 0 0 calc( 16px + 16px + 40px)
 				svg
-					wh 40px
+					wh 32px
+					+desktop()
+						wh 40px
 					use
 						fill: RGB($plight_blue)
 		&-alerts
-			margin-top: 16px
+			max-width 320px
+			margin-top 16px
 			font 400 16px/19.2px Barlow
 			color RGB($pdark_gray)
 		&-rating_img
@@ -1069,36 +1097,48 @@ body
 
 
 	&-upgrade
-		wh 100%
-		padding 30px 0
-		border-radius 8px
-		color: #fff
-		flex-wrap wrap
-		text-align: center
-		position: absolute
-		top 0
-		left 0
-		display: flex
-		align-items: center
-		justify-content: center
-		background-color RGBA($pdark_blue,.6)
-		backdrop-filter: blur(8px)
-		opacity: 0
-		transition .35s ease
+		padding 32px 24px
+		background-color RGBA($plight_blue,0.08)
+		text-align center
+		display flex
+		align-items center
+		justify-content center
+		flex-direction column
+		row-gap 24px
+		+desktop()
+			wh 100%
+			padding 30px 0
+			border-radius 8px
+			color #fff
+			flex-wrap wrap
+			position absolute
+			top 0
+			left 0
+			background-color RGBA($pdark_blue,.6)
+			backdrop-filter blur(8px)
+			opacity 0
+			transition .35s ease
 		&-title
 			font 600 24px/32px Barlow
+			+desktop()
+				font 600 24px/32px Barlow
 		&-text
-			w 100%
+			+desktop()
+				max-width 312px
+				w 100%
 		&-btn
 			font 500 16px/19.2px Barlow
-			color: #fff
+			color RGBA($pdark_blue,.8)
 			border-radius 8px
-			padding: 8px 16px
-			border: 2px solid #fff
+			padding 8px 16px
+			border 2px solid RGBA($pdark_blue,.8)
+			+desktop()
+				border-color #fff
+				color #fff
 .gray
 	&-block
 		+desktop()
-			padding-left: 46px
+			padding-left: 56px
 		&-title
 			font 500 24px/32px Barlow
 			padding-bottom: 24px
@@ -1137,38 +1177,43 @@ body
 		margin-bottom: 24px
 	&-bottom
 		&-row
-			column-gap: 16px
-			margin-top: 80px
-			padding-top: 40px
+			column-gap 16px
+			margin 80px 0
 			border-top 1.5px solid RGBA($plight_blue,.2)
 			+desktop()
-				margin-top: 24px
+				margin 40px 0 0
+				padding-top 40px
 				max-width 1024px
+				column-gap 72px
 		&-block
+			padding-left 0
+			margin-top 80px
 			.btn
 				+desktop()
 					w 120px
 					text-align: center
 			+desktop()
-				max-width 504px
-				min-width 504px
-				margin-top: 0
-				padding-left: 0
+				w 100%
+				max-width 448px
+				margin-top 0
+				padding-left 0
 			.gray-block-title
-				border-bottom: 0
-			padding-left: 0
-			margin-top: 40px
+				border-bottom 0
+				padding-bottom 0
 			.gray-text
-				margin-top: 8px
+				margin-top 16px
 
 .wh
 	&-block
-		margin-top: 32px
+		margin-top 32px
 		border-radius 8px
 		padding: 24px 24px 0
-		background-color: #fff
+		background-color #fff
 		border 1.5px solid RGBA($plight_blue,.2)
 		box-shadow 0 4px 16px RGBA($plight_blue,.16)
+		display none
+		+desktop()
+			display block
 		&-buttons
 			display: flex
 			justify-content space-between
