--- a/dev/templates/home-plan.pug
+++ b/dev/templates/home-plan.pug
@@ -23,7 +23,7 @@ block content
 								span Last Login Date:
 								span  03/15/2024
 				.row.white-items
-					.white-item
+					.white-item.home-white-items
 						.white-block
 							.white-block_head
 								h5.white-block_title.row
@@ -66,32 +66,7 @@ block content
 												| records for jmurack@gmail.com
 									li.white-block-list-item
 										button.btn.-blue
-											| Vie All Alerts
-						.white-block
-							.white-block_head
-								h5.white-block_title.row
-									svg
-										use(xlink:href='/img/sprite.svg#credit_score')
-									span Credit Monitoring
-								.white-block-status.-inactive.row
-									svg
-										use(xlink:href='/img/sprite.svg#error')
-									span Inactive
-							.white-block-body
-								.white-block-alerts
-									| Monitor your credit efforlessly with our
-									br
-									| service, ensuring your financial security.
-								ul.white-block-list
-									li.white-block-list-item.-empty
-										.white-block-list-item_image
-											.white-block-list-item_circle
-										.white-block-list-item_content
-											.white-block-list-item_header
-											.white-block-list-item_line
-											.white-block-list-item_line
-											.white-block-list-item_line.-short
-					.white-item
+											| View All Alerts
 						.white-block
 							.white-block_head
 								h5.white-block_title.row
@@ -112,72 +87,84 @@ block content
 												use(xlink:href='/img/sprite.svg#request_quote')
 										.white-block-list-item_content
 											span Jan 17 at 5:22 AM
-											strong
-												| Your password appeared in multiple data breach
-												| records for jmurack@gmail.com
+											strong Your password appeared in multiple data breach records for jmurack@gmail.com
 									li.white-block-list-item
 										.white-block-list-item_image
 											svg
 												use(xlink:href='/img/sprite.svg#supervisor_account')
 										.white-block-list-item_content
 											span Jan 17 at 5:22 AM
-											strong
-												| Your password appeared in multiple data breach
+											strong Your password appeared in multiple data breach
 									li.white-block-list-item
 										.white-block-list-item_image
 											svg
 												use(xlink:href='/img/sprite.svg#location_away')
 										.white-block-list-item_content
 											span Jan 17 at 5:22 AM
-											strong
-												| Your password appeared in multiple data breach
-												| records for jmurack@gmail.com
+											strong Your password appeared in multiple data breach records for jmurack@gmail.com
 									li.white-block-list-item
 										button.btn.-blue
-											| Vie All Alerts
-						.white-block
-							.white-block_head
-								h5.white-block_title.row
-									svg
-										use(xlink:href='/img/sprite.svg#disable_visible')
-									span Privacy Protect
-								.white-block-status.-inactive.row
-									svg
-										use(xlink:href='/img/sprite.svg#error')
-									span Inactive
-							.white-block-body
-								.white-block-alerts
-									| Protect your privacy online with our service,
-									br
-									| ensuring peace of mind while you browse
-								ul.white-block-list
-									li.white-block-list-item.-empty.-upgrade
-										.white-block-list-item_image
-											.white-block-list-item_circle
-										.white-block-list-item_content
-											.white-block-list-item_header
-											.white-block-list-item_line
-											.white-block-list-item_line
-											.white-block-list-item_line.-short
-										.white-upgrade
-											h5.white-upgrade-title Upgrade Plan
-											p.white-upgrade-text
-												| Activate Privacy Protect and secure your
-												br
-												| anonymity with fast activity alerts.
-											button.white-upgrade-btn
-												| Protect My Privacy
-
+											| View All Alerts
+						.white-block.-upgrade
+							.white-upgrade
+								h5.white-upgrade-title Upgrade Plan
+								p.white-upgrade-text Activate Credit Monitoring and enhance your security with our upgraded plan.
+								button.white-upgrade-btn Monitor my Credit
+							.white-block-inner
+								.white-block_head
+									h5.white-block_title.row
+										svg
+											use(xlink:href='/img/sprite.svg#credit_score')
+										span Credit Monitoring
+									.white-block-status.-inactive.row
+										svg
+											use(xlink:href='/img/sprite.svg#error')
+										span Inactive
+								.white-block-body
+									.white-block-alerts Monitor your credit efforlessly with our service, ensuring your financial security.
+									ul.white-block-list
+										li.white-block-list-item.-empty
+											.white-block-list-item_image
+												.white-block-list-item_circle
+											.white-block-list-item_content
+												.white-block-list-item_header
+												.white-block-list-item_line
+												.white-block-list-item_line
+												.white-block-list-item_line.-short
+						.white-block.-upgrade
+							.white-upgrade
+								h5.white-upgrade-title Upgrade Plan
+								p.white-upgrade-text Activate Privacy Protect and secure your anonymity with fast activity alerts.
+								button.white-upgrade-btn Protect My Privacy
+							.white-block-inner
+								.white-block_head
+									h5.white-block_title.row
+										svg
+											use(xlink:href='/img/sprite.svg#disable_visible')
+										span Privacy Protect
+									.white-block-status.-inactive.row
+										svg
+											use(xlink:href='/img/sprite.svg#error')
+										span Inactive
+								.white-block-body
+									.white-block-alerts Protect your privacy online with our service, ensuring peace of mind while you browse
+									ul.white-block-list
+										li.white-block-list-item.-empty
+											.white-block-list-item_image
+												.white-block-list-item_circle
+											.white-block-list-item_content
+												.white-block-list-item_header
+												.white-block-list-item_line
+												.white-block-list-item_line
+												.white-block-list-item_line.-short
 					.gray-block
 						h6.gray-block-title ID Risk Score
 						.gray-actions
 							span Breach Risk Score
 							strong 710
+							i
 							em Medium
-						p.gray-text
-							| Our scoring models use predictive statistical
-							| methods, combining historic identity theft victim
-							| data with over a thousand relevant factors to power advanced AI algorithms.
+						p.gray-text Our scoring models use predictive statistical methods, combining historic identity theft victim data with over a thousand relevant factors to power advanced AI algorithms.
 						button.btn Check my score
 						.wh-block.-little
 							h6.block-title My Vault
@@ -211,15 +198,10 @@ block content
 				.row.gray-bottom-row
 					.gray-block.gray-bottom-block
 						h6.gray-block-title Lost Wallet Service
-							p.gray-text
-								| In the event that you misplace or your wallet is stolen,we will
-								br
-								| assist you in securing your lost cards and important information.
-							a.btn Learn More
+						p.gray-text In the event that you misplace or your wallet is stolen,we will assist you in securing your lost cards and important information.
+						a.btn Learn More
 					.gray-block.gray-bottom-block
 						h6.gray-block-title Client Support
-							p.gray-text
-								| If you need assistance, our support team is here to help you with
-								| any questions or concerns you may have.
-							a.btn Get Help
+						p.gray-text If you need assistance, our support team is here to help you with any questions or concerns you may have.
+						a.btn Get Help
 	include footer-profile
