fix undefined pages

--- a/dev/stylus/front.styl
+++ b/dev/stylus/front.styl
@@ -1875,10 +1875,10 @@ body
 		display: block
 		margin 40px 0 45px
 	&-link
-		display: flex
-		align-items: center
-		column-gap: 17px
-		font: 500 16px/19px Barlow
+		display flex
+		align-items center
+		column-gap 8px
+		font 500 16px/19px Barlow
 		span
 			color RGB($pdark_blue)
 		svg
@@ -1888,8 +1888,10 @@ body
 	&-need
 		color RGB($pdark_gray)
 	&-title
+		text-align center
+		font-weight 700!important
 		+desktop()
-			font-size: 40px !important
+			font-size 40px !important
 .title
 	&-head
 		max-width 583px
