--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -106,6 +106,10 @@ body
 .subtitle
 	font 400 16px/19.2px Barlow
 	color RGB($pdark_gray)
+	span
+		w 100%
+		display block
+		text-wrap initial
 .text
 	font 400 16px/19.2px Barlow
 	color RGB($pdark_gray)
