--- a/dev/templates/home-credit.pug
+++ b/dev/templates/home-credit.pug
@@ -121,31 +121,31 @@ block content
 										use(xlink:href='/img/sprite.svg#check_circle')
 									span Active
 							.white-block-body
-								ul.white-block-list
-									li.white-block-list-item.nopad
-										.white-block-list-item_left
-											h5.white-block-list-item_title
-												| VantageScore 3.0
-											p.white-block-list-item_text
-												| According to data
-												| collected by Experian
-											button.btn.-blue
-												| View Details
-										.white-block-list-item_right
-											.white-block-rating_img
-												.white-block-rating_img_scoreStart
-													| 300
-												.white-block-rating_img_score
-													| 670
-												.white-block-rating_img_scoreTitle
-													| Your credit rating
-												.white-block-rating_img_scoreRating
-													| Good
-												.white-block-rating_img_scoreEnd
-													| 850
-												.white-block-rating_img_scoreCircle
-													span
-												img(src='/img/rating.svg')
+								.white-block-list-item.nopad
+									.white-block-list-item_left
+										h5.white-block-list-item_title.-with-icon
+											| VantageScore 3.0
+											svg
+												use(xlink:href="/img/sprite.svg#help")
+										p.credit-monitoring-gray
+											span According to data collected by Experian
+										button.btn.-blue
+											| View Details
+									.white-block-list-item_right
+										.white-block-rating_img
+											.white-block-rating_img_scoreStart
+												| 300
+											.white-block-rating_img_score
+												| 670
+											.white-block-rating_img_scoreTitle
+												| Your credit rating
+											.white-block-rating_img_scoreRating
+												| Good
+											.white-block-rating_img_scoreEnd
+												| 850
+											.white-block-rating_img_scoreCircle
+												span
+											img(src='/img/rating.svg')
 						.white-block
 							.white-block_head
 								h5.white-block_title.row
@@ -157,7 +157,7 @@ block content
 										use(xlink:href='/img/sprite.svg#check_circle')
 									span Active
 							.white-block-body
-								.white-block-alerts We’ve removed 16 pieces of exposed personal information for you, minimizing your risk of identity theft, hacks and spam.
+								.white-block-alerts We’ve removed #[strong 16] pieces of exposed personal information for you, minimizing your risk of identity theft, hacks and spam.
 								br
 								button.btn.-blue.-bi
 									| View Removed Information
